manifests/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  name:
    nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 80
