manifests/ingressroute_nginx.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/nginx`)
      priority: 10
      services:
        - name: nginx
          port: 8080
